tests/shell/fail/redirfail.ish
echo x > build/no-such-dir-h12/out.txt
